<resources>
    <string name="app_name">Data usage</string>
    <string name="app_info">Made with &#10084; in Czechia</string>
    <string name="app_author" translatable="false">Jakub Hekal</string>

    <string name="activity_title_apps">Apps</string>
    <string name="activity_info_apps">Data usage details for all apps</string>

    <string name="activity_title_settings">Settings</string>
    <string name="activity_info_settings">Manage limits, usage warnings, etc.</string>

    <string name="menu_refresh">Refresh</string>
    <string name="this_period">This period</string>
    <string name="today">Today</string>
    <string name="day">Day</string>

    <string name="theme_title">Theme</string>
    <string name="limit_title">Limits</string>
    <string name="limit_info">Set data usage limits for day, period and starting day for period</string>
    <string name="period_title">Period</string>
    <string name="period_info_main_1">%1$d day remaining (%2$s)</string>
    <string name="period_info_main_2">%1$d days remaining (%2$s)</string>
    <string name="period_info_main_3">%1$d days remaining (%2$s)</string>
    <string name="permissions_title">Permissions</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_info">Manage notifications about your data usage</string>

    <string name="dialog_theme_title">Choose theme</string>
    <string name="dialog_theme_dark">Dark</string>
    <string name="dialog_theme_light">Light</string>
    <string name="dialog_theme_system">Default system setting</string>

    <string name="period_start_title">Period starting day</string>
    <string name="period_limit_title">Period limit</string>
    <string name="daily_limit_title">Daily limit</string>
    <string name="daily_limit_calculated_title">Calculate daily limit</string>
    <string name="daily_limit_calculated_info">Your daily limit will be calculated depending on your period limit and previous daily usage</string>

    <string name="period_end_title">End of period</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_info">Your detailed data usage overview</string>
    <string name="notification_permanent_title">Used: %1$s</string>
    <string name="notification_permanent_info">Limit: %1$s</string>
    <string name="notification_warning_title">Usage warning</string>
    <string name="notification_warning_info">You already used %1$d% of your daily limit</string>
    <string name="permanent_title">Permanent notification</string>
    <string name="permanent_info">Shows todays usage and limit</string>
    <string name="apps_empty">No app used data</string>
    <string name="data_transmitted">Transmited</string>
    <string name="data_received">Received</string>
    <string name="data_total">Total</string>
    <string name="app_detail_title">App detail</string>
    <string name="app_detail_settings_title">App info</string>
    <string name="app_detail_settings_info">System information about this app</string>
    <string name="github_title" translatable="false">Github</string>
    <string name="github_info">This app is open-source, check it out</string>
    <string name="activity_title_permissions">Permissions</string>
    <string name="activity_info_permissions">To work properly this app needs some permissions</string>
    <string name="permission_ignore_battery_optimization_title">Ignore battery optimization</string>
    <string name="permission_ignore_battery_optimization_info">This will allow this app to run in background constantly</string>
    <string name="permission_phone_title">Phone</string>
    <string name="permission_phone_info">This will allow this app to read your \"Subscriber ID\" needed for access to data usage</string>
    <string name="permission_usage_access_title">Usage data access</string>
    <string name="permission_usage_access_info">This will allow this app to read your data usag</string>
    <string name="permissions_missing_title">Missing permissions</string>
    <string name="permissions_missing_info">To work properly this app needs some permissions. Click for more information</string>
</resources>