<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?attr/colorBackground"
        android:elevation="0dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/menu_item"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:background="?attr/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.jakubhekal.datausage.views.LineSwitchView
                android:id="@+id/permission_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:imageIcon="@drawable/icon_permission_phone"
                app:textInfo="@string/permission_phone_info"
                app:textTitle="@string/permission_phone_title">

            </com.jakubhekal.datausage.views.LineSwitchView>

            <com.jakubhekal.datausage.views.LineSwitchView
                android:id="@+id/permission_ignore_battery_optimization"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:imageIcon="@drawable/icon_permission_ignore_battery_optimization"
                app:textInfo="@string/permission_ignore_battery_optimization_info"
                app:textTitle="@string/permission_ignore_battery_optimization_title">

            </com.jakubhekal.datausage.views.LineSwitchView>

            <com.jakubhekal.datausage.views.LineSwitchView
                android:id="@+id/permission_usage_access"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:imageIcon="@drawable/icon_data_usage"
                app:textInfo="@string/permission_usage_access_info"
                app:textTitle="@string/permission_usage_access_title">

            </com.jakubhekal.datausage.views.LineSwitchView>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>