<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="?attr/colorBackground"
        android:elevation="0dp"
        android:theme="@style/ToolBarStyle"
        app:popupTheme="@style/menu_item"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:background="?attr/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.jakubhekal.datausage.views.LineInputView
                android:id="@+id/period_start_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                app:imageIcon="@drawable/icon_period"
                app:textHint="1-31"
                app:textTitle="@string/period_start_title"
                app:textDefaultValue="1">

            </com.jakubhekal.datausage.views.LineInputView>

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:alpha="0.5"
                android:background="?attr/colorSecondaryText" />

            <com.jakubhekal.datausage.views.LineInputView
                android:id="@+id/period_limit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                app:imageIcon="@drawable/icon_month"
                app:textHint="0"
                app:textLabel="MB"
                app:textTitle="@string/period_limit_title"
                app:textDefaultValue="0">

            </com.jakubhekal.datausage.views.LineInputView>

            <com.jakubhekal.datausage.views.LineSwitchView
                android:id="@+id/daily_limit_calculated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:imageIcon="@drawable/icon_calculated"
                app:textInfo="@string/daily_limit_calculated_info"
                app:textLabel="MB"
                app:textTitle="@string/daily_limit_calculated_title" />

            <com.jakubhekal.datausage.views.LineInputView
                android:id="@+id/daily_limit_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="numberDecimal"
                app:imageIcon="@drawable/icon_day"
                app:textHint="0"
                app:textLabel="MB"
                app:textTitle="@string/daily_limit_title"
                app:textDefaultValue="0">

            </com.jakubhekal.datausage.views.LineInputView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>